<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/loanNumber"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:autofillHints="loan amount"
        android:ems="10"
        android:hint="@string/hint_loan_amount"
        android:inputType="number" />

    <EditText
        android:id="@+id/interestRate"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:autofillHints="loan amount"
        android:ems="10"
        android:hint="@string/hint_interest_rate"
        android:inputType="number" />

    <EditText
        android:id="@+id/loanTerm"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:autofillHints="loan amount"
        android:ems="10"
        android:hint="@string/hint_loan_term"
        android:inputType="number" />

    <EditText
        android:id="@+id/loanFees"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:autofillHints="loan amount"
        android:ems="10"
        android:hint="@string/hint_loan_fees"
        android:inputType="number" />

    <EditText
        android:id="@+id/minimum_payment"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:autofillHints="loan amount"
        android:ems="10"
        android:hint="@string/hint_minimum_payment"
        android:inputType="number" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/btn_calculate" />
</LinearLayout>